adding Reg-x pattern

--- a/pos/itemForm.html
+++ b/pos/itemForm.html
@@ -102,28 +102,28 @@
             <div class="mb-3">
                 <label class="form-label " for="itemIdTxt">Item Id</label>
                 <input class="form-control " id="itemIdTxt" placeholder="Item ID" type="text">
-                <p><small class="text-danger p-1 fw-bold" id="itemIdTxtLbl"></small></p>
+<!--                <p><small class="text-danger p-1 fw-bold" id="itemIdTxtLbl"></small></p>-->
             </div>
 
             <!-- item name set up -->
             <div class="mb-3">
                 <label class="form-label" for="ItemNameTxt">Item Name</label>
                 <input class="form-control" id="ItemNameTxt" placeholder="Item Name" type="text">
-                <p><small class="text-danger p-1" id="itemNameTxtLbl"></small></p>
+<!--                <p><small class="text-danger p-1" id="itemNameTxtLbl"></small></p>-->
             </div>
 
             <!-- item Qty set up -->
             <div class="mb-3">
                 <label class="form-label" for="itemQtyTxt">Item Qty</label>
                 <input class="form-control" id="itemQtyTxt" placeholder="Item Qty" type="text">
-                <p><small class="text-danger p-1" id="itemQtyTxtLbl"></small></p>
+<!--                <p><small class="text-danger p-1" id="itemQtyTxtLbl"></small></p>-->
             </div>
 
             <!-- Unit price set up -->
             <div class="mb-3">
                 <label class="form-label" for="unitPriceTxt">Unit Price</label>
                 <input class="form-control" id="unitPriceTxt" placeholder="Unit Price" type="text">
-                <p><small class="text-danger p-1" id="itemUnitPriceTxtLbl"></small></p>
+<!--                <p><small class="text-danger p-1" id="itemUnitPriceTxtLbl"></small></p>-->
             </div>
 
         </div>
