--- a/spa/index.html
+++ b/spa/index.html
@@ -13,6 +13,9 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link href="bootstraps/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstraps/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
 </head>
 <body>
 
@@ -38,7 +41,7 @@
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <button aria-current="page" class="nav-link btn btn-dark" id="Home">Home</button>
+                        <button  aria-current="page" class="nav-link btn btn-dark active" id="Home">Home</button>
                     </li>
 
                     <li class="nav-item">
@@ -52,7 +55,6 @@
                     <li class="nav-item" >
                         <button class="nav-link btn btn-dark" id="Order">Orders</button>
                     </li>
-
                 </ul>
             </div>
         </div>
@@ -60,19 +62,7 @@
 
 </header>
 
-<!-- introducing home page -->
-<section class="container-fluid" id="HomePage" style="display:none">
-
-    <div class="has-bg-img ">
-        <img alt="..."
-             class="bg-img position-relative "
-             src="assets/img/veg-biryani-veg-pulav-served-round-brass-bowl-selective-focus.jpg"
-             style="width: 100% ;height: 92vh ">
-    </div>
-
-</section>
-
-<!-- introducing customer form -->
+<!-- introducing item form -->
 <section class="container-fluid"  id="itemForm" style="display:none">
 
     <section class="row mt-0  justify-content-around" style="margin-right: 0; margin-left: 0">
@@ -83,12 +73,12 @@
            box-shadow: 0 0 12px 8px #7c7b7e;">
 
                 <!-- manage customer label setup -->
-                <h1 class="h1 mb-3" style="font-family: 'Kanit', sans-serif;color: white; font-weight: bold ">Manage
+                <h1 class="h1 mb-3" style="font-family: 'Kanit', sans-serif;color: #ffffff; font-weight: bold ">Manage
                     Items</h1>
                 <div class="mb-3">
 
                     <!-- search text label -->
-                    <label class="form-label" for="srcItemID" style="color: white; font-weight: bold">Search
+                    <label class="form-label" for="srcItemID" style="color: #ffffff; font-weight: bold">Search
                         Item here</label>
 
                     <!-- text field set up -->
@@ -108,12 +98,12 @@
         </div>
 
         <!-- customer details form -->
-        <div class="col-12 col-md-5 mt-3" style="border-radius: 10px; background-color: #EFEFEF;border: 3px solid black">
+        <div class="col-12 col-md-5 mt-3" style="border-radius: 10px; background-color: #ffffff;border: 3px solid black">
 
             <!-- item ID set up -->
             <div class="mb-3">
                 <label class="form-label " for="itemIdTxt">Item Id</label>
-                <input class="form-control " id="itemIdTxt" placeholder="Item ID" type="text">
+                <input class="form-control " disabled id="itemIdTxt" placeholder="Item ID" type="text">
                 <p><small class="text-danger fw-bold" id="itemIdTxtLbl"></small></p>
             </div>
 
@@ -177,8 +167,8 @@
         <div class="col-12 col-md-5 mt-5">
             <div class="shadow-sm pt-3 pb-5 px-3 py-3 mt-2" style=" background-color:#130f40;
          border-radius: 10px;
-          border: 3px solid black;
-           box-shadow: 0 0 12px 8px #7c7b7e;">
+          border: 2px solid black;
+           box-shadow: 0 0 12px 8px #ffffff;">
 
                 <!-- manage customer label setup -->
                 <h1 class="h1 mb-3" style="font-family: 'Kanit', sans-serif;color: white; font-weight: bold ">Manage
@@ -186,7 +176,7 @@
                 <div class="mb-3">
 
                     <!-- search text label -->
-                    <label class="form-label" for="srcCustomerId" style="color: white; font-weight: bold">Search
+                    <label class="form-label" for="srcCustomerId" style="color: #ffffff; font-weight: bold">Search
                         Customer</label>
 
                     <!-- text field set up -->
@@ -216,12 +206,12 @@
 
         <!-- customer details form -->
         <div class="col-12 col-md-5 mt-3"
-             style="border-radius: 10px; background-color: #EFEFEF;border: 3px solid black">
+             style="border-radius: 10px; background-color: #ffffff;border: 3px solid black">
 
             <!-- customer ID set up -->
             <div class="mb-3">
                 <label class="form-label" for="cusIdTxt" style="font-weight: bolder">Customer ID</label>
-                <input class="form-control " id="cusIdTxt" placeholder="Customer ID" type="text">
+                <input class="form-control " disabled id="cusIdTxt" placeholder="Customer ID" type="text">
                 <p><small class="text-danger fw-bold" id="customerIdLbl"></small></p>
             </div>
 
@@ -374,16 +364,19 @@
                                         <div class="col-6">
                                             <div class="form-group">
                                                 <label>Item Code :</label>
-                                                <label for="txtItemCode"></label><input class="form-control"
-                                                                                        id="txtItemCode" type="text">
+                                                <label for="itemCodeCombo"></label>
+<!--                                                <input class="form-control" id="txtItemCode" type="text">-->
+                                                <select class="form-control" id="itemCodeCombo"></select>
                                             </div>
                                         </div>
 
                                         <div class="col-6">
                                             <div class="form-group">
                                                 <label>Item :</label>
-                                                <label for="selectItemCode"></label><select class="form-control" disabled
-                                                                                            id="selectItemCode"></select>
+                                                <label for="selectItemCode"></label>
+
+                                                <input class="form-control" disabled id="selectItemCode" type="text">
+<!--                                                <select class="form-control" disabled id="selectItemCode"></select>-->
                                                 <span class="control-error"
                                                       id="item-empty-error"></span>
                                             </div>
@@ -424,10 +417,12 @@
                                     </div>
 
                                     <div class="form-group text-right">
-                                        <button class="btn btn-outline-success col-12 col-sm-auto mt-1"
+                                        <button class="btn btn-success col-12 col-sm-auto mt-1"
                                                 id="btnAddToTable" type="button">
                                             Add Item
                                         </button>
+
+                                        <button type="button" class="btn btn-warning col-12 col-sm-auto mt-1" data-bs-toggle="modal" data-bs-target="#myModal">Order Details</button>
                                     </div>
                                 </form>
                             </div>
@@ -446,18 +441,20 @@
                                             <span class="" id="total-text">Total : </span>
                                         </div>
                                         <div class="col-12">
-                                            <span id="total">00.0</span> Rs/=
+                                            Rs/= <span id="total">00.0</span>
+<!--                                            <span id="total">00.0</span> Rs/=-->
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="col-12">
                                     <div class="row">
-                                        <div class="col-12">
+                                        <div class="col-12 mt-3">
                                             <span id="total-text1">SubTotal : </span>
                                         </div>
                                         <div class="col-12">
-                                            <span id="subtotal">00.0</span> Rs/=
+                                            Rs/= <span id="subtotal">00.0</span>
+<!--                                            <span id="subtotal">00.0</span> Rs/=-->
                                         </div>
                                     </div>
                                 </div>
@@ -477,14 +474,14 @@
                                     </div>
                                 </div>
 
-                                <div class="col-8">
+                                <div class="col-12">
                                     <div class="form-group">
                                         <label>Balance</label>
                                         <label for="txtBalance"></label><input class="form-control" id="txtBalance" type="text">
                                     </div>
                                 </div>
-                                <div class="col-4">
-                                    <button class="btn btn-outline-primary mt-3" id="btnSubmitOrder" type="button">
+                                <div class="col-8">
+                                    <button class=" btn btn-danger mt-4" id="btnSubmitOrder" type="button">
                                         Purchase
                                     </button>
                                 </div>
@@ -516,7 +513,63 @@
             </div>
         </div>
     </main>
+
+
+    <div class="container mt-5">
+<!--        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">Contact Us</button>-->
+
+        <div class="modal" id="myModal">
+            <div class="modal-dialog modal-fullscreen">
+                <div class="modal-content">
+                    <div class="modal-header" style="background: #0ab20d">
+                        <h5 class="modal-title" id="orderDetailLabel">Order Detail Form</h5>
+                        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal"
+                                type="button"></button>
+                    </div>
+                    <div class="modal-body"  style="margin-left: 1.5em">
+                        <section class="row" style="width: 100%">
+                            <table class="table table-dark table-striped mt-0 container-fluid">
+                                <thead>
+                                <tr>
+                                    <th scope="col">Order Id</th>
+                                    <th scope="col">Order Date</th>
+                                    <th scope="col">Customer Id</th>
+                                    <th scope="col">Item Code</th>
+                                    <th scope="col">Order Quantity</th>
+                                    <th scope="col">Discount</th>
+                                    <th scope="col">Total</th>
+                                </tr>
+                                </thead>
+                                <tbody id="itemDetailsTblBody">
+
+                                </tbody>
+                            </table>
+                        </section>
+                    </div>
+<!--                    <div class="modal-footer">-->
+<!--                        <button type="submit" class="btn btn-primary">Submit</button>-->
+<!--                        <button type="submit" class="btn btn-danger">Cancel</button>-->
+<!--                    </div>-->
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </main>
+
+<!-- introducing home page -->
+<section class="container-fluid" id="HomePage" style="display:none">
+
+    <div class="has-bg-img ">
+        <img alt="..."
+             class="bg-img position-relative "
+             src="assets/img/veg-biryani-veg-pulav-served-round-brass-bowl-selective-focus.jpg"
+             style="width: 100% ;height: 92vh ">
+    </div>
+
+</section>
+
 
 
 <!-- JAVA SCRIPT -->
@@ -533,9 +586,6 @@
 <!-- common methods for all scripts -->
 <script src="common/common-methods.js"></script>
 
-<!-- script for dashboard form controller -->
-<script src="controllers/dashboardFormController.js"></script>
-
 <!-- script for customer form controller -->
 <script src="controllers/customerController.js"></script>
 
@@ -544,6 +594,13 @@
 
 <!-- script for order management form -->
 <script src="controllers/orderFormController.js"></script>
+
+<!-- script for dashboard form controller -->
+<script src="controllers/dashboardFormController.js"></script>
+
+<script src="controllers/orderDetails.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 </body>
 </html>
