--- a/spa/index.html
+++ b/spa/index.html
@@ -610,7 +610,7 @@
 <script src="db/db.js"></script>
 
 <!-- common methods for all scripts -->
-<script src="common/common-methods.js"></script>
+<script src="util/common-methods.js"></script>
 
 <!-- script for customer form controller -->
 <script src="controllers/customerController.js"></script>
@@ -625,6 +625,15 @@
 <script src="controllers/dashboardFormController.js"></script>
 
 <script src="controllers/orderDetails.js"></script>
+
+
+<script src="model/Customer.js"></script>
+
+<script src="model/Item.js"></script>
+
+<script src="model/Order.js"></script>
+
+
 
 <script crossorigin="anonymous"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
