--- a/spa/index.html
+++ b/spa/index.html
@@ -22,27 +22,28 @@
 <body>
 
 <div class="container pt-3 tada " id="loginPage" style="border-radius: 8px;">
-    <div class="row pb-5 backGround-Image-Home " >
+    <div class="row pb-5 backGround-Image-Home ">
         <div class="col-md-6 offset-md-3 mt-5 pt-5" style="border-radius: 8px">
-            <div class="login-form mt-5 p-4 mt-5 pt-5 loginPageBox bgColour rotate-center" >
-                <form action="" method="#" class="row g-3">
+            <div class="login-form mt-5 p-4 mt-5 pt-5 loginPageBox bgColour rotate-center">
+                <form action="" class="row g-3" method="#">
                     <h4 style="font-family: 'Pacifico', cursive;font-weight: bolder;">mGunawardhana POS</h4>
                     <div class="col-12 col-lg-6 col-xxl-6 ">
                         <label>Username</label>
-                        <input type="text" id="usernameTxt" name="username" class="form-control" placeholder="Username">
+                        <input class="form-control" id="usernameTxt" name="username" placeholder="Username" type="text">
                     </div>
                     <div class="col-12 col-lg-6 col-xxl-6 ">
                         <label>Password</label>
-                        <input type="password" id="passwordTxt" name="password" class="form-control" placeholder="Password">
+                        <input class="form-control" id="passwordTxt" name="password" placeholder="Password"
+                               type="password">
                     </div>
                     <div class="col-12 col-lg-6 col-xxl-6 ">
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="rememberMe">
+                            <input class="form-check-input" id="rememberMe" type="checkbox">
                             <label class="form-check-label" for="rememberMe"> Remember me</label>
                         </div>
                     </div>
                     <div class="col-12 col-lg-6 col-xxl-6 ">
-                        <button type="button" id="loginBtn" class="btn btn-success btnFunny">Login</button>
+                        <button class="btn btn-success btnFunny" id="loginBtn" type="button">Login</button>
                     </div>
                 </form>
                 <hr class="mt-4">
@@ -54,48 +55,7 @@
 
     </div>
 
-<!--&lt;!&ndash;    adding image slider&ndash;&gt;-->
-<!--    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">-->
-<!--        <div class="carousel-indicators">-->
-<!--            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>-->
-<!--            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>-->
-<!--            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>-->
-<!--        </div>-->
-<!--        <div class="carousel-inner">-->
-<!--            <div class="carousel-item active">-->
-<!--                <img src="assets/img/food-facebook-cover-17.jpg" class="d-block w-100" alt="...">-->
-<!--                <div class="carousel-caption d-none d-md-block">-->
-<!--                    <h5>First slide label</h5>-->
-<!--                    <p>Some representative placeholder content for the first slide.</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="carousel-item">-->
-<!--                <img src="assets/img/Food-Facebook-Cover-Banner-19.jpg" class="d-block w-100" alt="...">-->
-<!--                <div class="carousel-caption d-none d-md-block">-->
-<!--                    <h5>Second slide label</h5>-->
-<!--                    <p>Some representative placeholder content for the second slide.</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="carousel-item">-->
-<!--                <img src="assets/img/Food-Facebook-Cover-Banner-20.jpg" class="d-block w-100" alt="...">-->
-<!--                <div class="carousel-caption d-none d-md-block">-->
-<!--                    <h5>Third slide label</h5>-->
-<!--                    <p>Some representative placeholder content for the third slide.</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">-->
-<!--            <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-<!--            <span class="visually-hidden">Previous</span>-->
-<!--        </button>-->
-<!--        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">-->
-<!--            <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-<!--            <span class="visually-hidden">Next</span>-->
-<!--        </button>-->
-<!--    </div>-->
-
 </div>
-
 
 <!-- header section set up -->
 <header id="header">
@@ -138,10 +98,10 @@
         </div>
     </nav>
 
-</header >
+</header>
 
 <!-- introducing item form -->
-<section class="container-fluid" id="itemForm" >
+<section class="container-fluid" id="itemForm">
 
     <section class="row mt-0  justify-content-around" style="margin-right: 0; margin-left: 0">
         <div class="col-12 col-md-5 mt-5">
@@ -364,9 +324,11 @@
                             <div class="card-header font-weight-bolder"
                                  style="background-color: black;font-weight: bold; color: #ffffff">Customer Details
                             </div>
+
                             <!-- customer details card section body set up -->
                             <div class="card-body" style="background-color: #ffffff">
                                 <!-- starting form -->
+
                                 <form action="">
                                     <!-- order id text field and label set up -->
                                     <div class="row">
@@ -378,6 +340,7 @@
                                                 <span class="control-error" id="orderId-invalid-error"></span>
                                             </div>
                                         </div>
+
                                         <!-- date selector and label set up -->
                                         <div class="col-6">
                                             <div class="form-group">
@@ -387,6 +350,7 @@
                                             </div>
                                         </div>
                                     </div>
+
                                     <!-- customer id text field -->
                                     <div class="row">
                                         <div class="col-6">
@@ -397,6 +361,7 @@
                                                 <select class="form-control" id="orderCustomerID"></select>
                                             </div>
                                         </div>
+
                                         <!-- customer name text field -->
                                         <div class="col-6">
                                             <div class="form-group">
@@ -498,29 +463,40 @@
                                         <hr class="mt-2">
                                         <hr>
 
-
-                                        <div class="col-12 mt-4">
-
+                                        <div class="col-12">
                                             <div class="form-group">
                                                 <label>Order Quantity :</label>
                                                 <label for="txtQty"></label><input class="searchFld form-control"
                                                                                    id="txtQty"
                                                                                    min="1" type="number">
                                                 <span class="control-error" id="order-qty-empty-error"></span>
+
+                                                <div class="form-group">
+                                                    <label>Search to Remove From Cart :</label>
+                                                    <label for="searchToRemoveFromCart"></label>
+                                                    <input class="form-control" id="searchToRemoveFromCart">
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
 
                                     <div class="form-group text-right">
+
                                         <button class="btn btn-success col-12 col-sm-auto mt-1 btnBackGround"
                                                 id="btnAddToTable" type="button">
                                             Add Item
+                                        </button>
+
+                                        <button class="btn btn-success col-12 col-sm-auto mt-1 btnBackGround"
+                                                id="btnRemoveFromCart" type="button">
+                                            Remove From Cart
                                         </button>
 
                                         <button class="btn btn-warning col-12 col-sm-auto mt-1 btnBackGround"
                                                 data-bs-target="#myModal"
                                                 data-bs-toggle="modal" type="button">Order Details
                                         </button>
+
                                     </div>
                                 </form>
                             </div>
@@ -535,16 +511,16 @@
 
                                 <div class="col-12">
                                     <div class="row">
+
                                         <div class="col-12">
                                             <span class="" id="total-text">Total : </span>
                                         </div>
+
                                         <div class="col-12">
                                             <input class="searchFld form-control" disabled id="total"
                                                    type="text">
-                                            <!--                                            Rs/= <span id="total">00.0</span>-->
-                                            <!--                                            ------------------------------------------------------------------------------------------>
-                                            <!--                                            <span id="total">00.0</span> Rs/=-->
                                         </div>
+
                                     </div>
                                 </div>
 
@@ -670,42 +646,51 @@
 
 <!-- introducing home page -->
 <section class="container-fluid" id="HomePage">
-
     <!--    adding image slider-->
-    <div id="carouselExampleDark" class="carousel carousel-dark mt-auto slide" data-bs-ride="carousel">
+
+    <div id="carouselExampleCaptions" class="carousel slide tv-option" data-bs-ride="false">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" class="active" aria-current="true" aria-label="Slide 1"></button>
         </div>
-        <div class="carousel-inner tv-option">
-            <div class="carousel-item active" data-bs-interval="10000">
-                <img src="assets/img/food-facebook-cover-17.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-inner">
+            <div class="carousel-item active tv-option">
+                <img src="assets/img/food-facebook-cover-17.jpg" class="d-block w-100 tv-option" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
             </div>
-            <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/Food-Facebook-Cover-Banner-19.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-item tv-option ">
+                <img src="assets/img/Food-Facebook-Cover-Banner-19.jpg" class="d-block w-100 tv-option" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Crustaceans, Echinoderms</h5>
-                    <p style="color: white">Buy any 2 delicious plates and win buddy plate.</p>
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img src="assets/img/Food-Facebook-Cover-Banner-20.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-item tv-option">
+                <img src="assets/img/Food-Facebook-Cover-Banner-20.jpg" class="d-block w-100 tv-option" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+
+            <div class="carousel-item tv-option ">
+                <img src="assets/img/Food-Web-Banner-18.jpg" class="d-block w-100 tv-option" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the third slide.</p>
                 </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
